--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Convert SVG to Pebble GPath C code, for inclusion in Pebble C apps.",
   "keywords": ["SVG","Pebble", "GPath", "GPathInfo"],
   "author": "Rajendra Serber",
-  "homepage": "https://github.com/ardnejar/GPath.svg.git",
+  "homepage": "https://github.com/ardnejar/GPath.svg",
   "repository": "https://github.com/ardnejar/GPath.svg.git",
   "bugs": "https://github.com/ardnejar/GPath.svg/issues",
   "files": ["?"],
